add script and css file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="jocks">
+            <img src="https://thumbs.dreamstime.com/b/lol-emoji-isolated-white-background-laughing-face-emoticon-d-rendering-203866455.jpg"
+                alt="">
+            <h1 class="printJocks">
+                lets try
+            </h1>
+            <button class="btn">click</button>
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
